# mortuary-burn

./: .gitignore  Anchor.toml  LICENSE  README.md  package-lock.json  package.json  tsconfig.json
cli/: package-lock.json  package.json
cli/src/: cli.ts
cli/src/commands/: create_booster.ts  initialize_master.ts  print_info.ts  update_booster.ts  update_master.ts  withdraw_master.ts
cli/src/helper/: transaction.ts
cli/src/helpers/: accounts.ts
cli/src/idl/: mortuary.json  mortuary.ts
programs/mortuary/: Cargo.toml
programs/mortuary/src/: account.rs  account_booster.rs  account_v3.rs  check.rs  common.rs  error.rs  lib.rs
tests/: accounts.ts  booster.ts  burn.ts  helper.ts  mortuaryHelper.ts  nftcreator.ts  v2burn.ts  v3burn.ts
