[package]
name = "mortuary"
version = "0.3.0"
description = "Burning facilities for dead NFT"
edition = "2018"

[lib]
crate-type = ["cdylib", "lib"]
name = "mortuary"

[features]
no-entrypoint = []
no-idl = []
cpi = ["no-entrypoint"]
default = []

[dependencies]
anchor-lang = "0.24.2"
anchor-spl = "0.24.2"
spl-token = { version = "3.2.0", features = ["no-entrypoint"] }
spl-associated-token-account = { version="1.0.5", features = [ "no-entrypoint" ] }
mpl-token-metadata = { version="1.3.3", features = [ "no-entrypoint" ] }
